Fixed logo alignment

--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,11 @@ body {
     padding: 15px;
 }
 
+a:hover {
+    color: #578834; /* Change to your preferred color */
+    transition: color 0.3s ease;
+}
+
 .header {
     padding: 0 20px;  
     color: white;   
@@ -58,12 +63,32 @@ body {
     justify-content: flex-end;
 }
 
-.cardcontent {
-    font-family: var(--font-DIN-Medium);
+.github-link {
+    display: flex;
+    align-items: center;
+    gap: 10px; 
     text-decoration: none;
-}
+    color: inherit;
+  }
 
-.cardcontent a:hover {
-    color: #578834; /* Change to your preferred color */
-    transition: color 0.3s ease;
+.github-heading {
+    font-size: 25px; /* Adjust the text size as needed */
+    margin: 0; /* Remove default margin */
+  }
+
+.cardcontent-pro1-a {
+    display: flex;
+    align-items: center;
+    gap: 8px;          /* Spacing between the icon and text */
+    text-decoration: none;
+    color: inherit;
+  }
+
+
+
+.cardcontent {
+    display: inline-block;
+    font-family: var(--font-DIN-Medium);
+    font-size: 20px;
+    text-decoration: none;
 }
